[project]
name = "plotis"
version = "0.0.1"
authors = [
  { name="Victor Brun", email="victor.w.brun@gmail.com" },
]
description = "Plot isolation tool for pyhton"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
	"tests"
]
